force-app/main/default/objects/MailMatchingSetting__c.object
<CustomObject>
    <fields>
        <fullName>AddressKey__c</fullName>
        <label>受信対象メールアドレス</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>AddressTarget__c</fullName>
        <label>参照対象アドレス</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>From</fullName>
                    <default>true</default>
                    <label>From:アドレス</label>
                </value>
                <value>
                    <fullName>To</fullName>
                    <label>To:アドレス</label>
                </value>
                <value>
                    <fullName>Transfer</fullName>
                    <label>最終転送アドレス</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AttachmentFile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>添付ファイルの取込</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Availability__c</fullName>
        <defaultValue>false</defaultValue>
        <label>有効</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ErrorResMessage__c</fullName>
        <defaultValue>&apos;メールサービス処理でエラーが発生しました。&apos;</defaultValue>
        <label>エラー発生時の案内文言</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ObjectApi__c</fullName>
        <label>対象オブジェクト</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OriginalMessageApi__c</fullName>
        <label>オリジナルメッセージ</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProviderMailAddressApi__c</fullName>
        <label>送信元メールアドレス</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProviderNameApi__c</fullName>
        <label>送信者</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SaveErrorLog__c</fullName>
        <defaultValue>false</defaultValue>
        <label>エラーをレコードに保存する</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SettingNameApi__c</fullName>
        <label>Mail2X設定</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubjectApi__c</fullName>
        <label>件名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Mail2X設定</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>AddressKey__c</columns>
        <columns>AddressTarget__c</columns>
        <columns>ObjectApi__c</columns>
        <columns>Availability__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>Mail2X設定名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>